@@ -1,4 +1,5 @@
 0.3.0
+Holding 'SHIFT' key when selecting 'Select Tab' from menu now moves the selected tab next to the current tab and selects it.
 Tweaked tools install to reflect appname suffix.
 Redone .desktop files.
 Redone prefs toolbar customize.
